fix start on mobile

--- a/Tetris Game/tetris.css
+++ b/Tetris Game/tetris.css
@@ -16,7 +16,7 @@ body {
   height: 450px;
   border-radius: 10px;
   border: #09205f 5px solid;
-  background-image: url("./images/Tetris_tile_background.jpg");
+  background-image: url("./images/Tetris_tile_background.webp");
   background-size: cover;
 }
 
@@ -128,6 +128,7 @@ body {
 
 input[type="range"] {
   -webkit-appearance: none;
+  appearance: none;
   width: 100%;
   height: 8px;
   background: linear-gradient(to right, #09205f, #1c6ae9);
